Added assertNotNull to test